--- a/study/t_study/Ex/study/eyeCardAnimation.html
+++ b/study/t_study/Ex/study/eyeCardAnimation.html
@@ -19,7 +19,7 @@
             <p class="t_box">
                 1. HTML속 각각에 class를 querySelector 요소를 잡아줍니다.<br>
                 2. animate 요소에 움직임을 주기 위해서 speed 요소도 잡아주며, 각 좌표에 값도 지정해줍니다.<br>
-                3. script 안에 eye, wrap 요소의 스타일을 주며, perspective는 원근감 느낌을 주는 속성입니다.<br>
+                3. script 안에 eye, wrap 요소의 스타일을 주며, perspective는 원근감 느낌을 주는 속성입니다.
             </p><br>
 
             <p class="codepen" data-height="450" data-default-tab="css,result" data-slug-hash="YzLEvjr" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
