--- a/study/t_study/Ex/study/mouseEffect06.html
+++ b/study/t_study/Ex/study/mouseEffect06.html
@@ -14,7 +14,7 @@
         <div class="document">
             <h2 class="t_tit">마우스 이펙트 : 텍스트 효과</h2>
             <p class="t_desc2">
-                이번에는 마우스에 이미지 효과를 넣은 이펙트를 코딩해봤습니다.
+                이번에는 마우스에 텍스트 효과를 넣은 이펙트를 코딩해봤습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
