--- a/study/t_study/Ex/study/parallaxEffect06.html
+++ b/study/t_study/Ex/study/parallaxEffect06.html
@@ -14,15 +14,13 @@
         <div class="document">
             <h2 class="t_tit">페럴랙스 이펙트 : 텍스트 효과</h2>
             <p class="t_desc2">
-                이번에는 마우스에 이미지 효과를 넣은 이펙트를 코딩해봤습니다.
+                이번에는 페럴랙스 이펙트 중에 텍스트 효과를 넣는 방법을 코딩해봤습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
-                HTML 코드는 뭐.. 다른 것들과 거의 비슷하죠..? 추가적인 mouse__info의 좌표 값만 따로 몇 개만 추가하시면 됩니다.<br>
-                각 CSS로 이용할 클래스 이름 지정과 스크립트에 이용할 클래스 이름<i>mouse__cursor</i> 미리 지정해둡니다.<br>
-                또한, 현재 마우스 좌표 값을 스크립트 적용하기 위해 <i>mouse__info</i> 클래스에 각각에 좌표 값에 맞는 클래스를 따로 지정해줍니다.<br>
-                글은..여러분이 평소에 가진 가치관을 기준으로...?
+                HTML 코드는 사용해 줄 섹션 구간을 나눠주고 CSS와 스크립트를 이용하기위해 각각에 class로 이름을 지정해줍니다.<br>
+                텍스트는 자신이 좋아하는 말이나..명언을...? 집어넣어주세여..
             </p>
             <details>
                 <summary>HTML CODE</summary>
@@ -134,10 +132,11 @@
 
             <h3 class="t_tit2">CSS</h3>
             <p class="t_desc2">
-                이번 CSS는 3d 효과 느낌을 주기 위해 공간감을 추가해주는 <i>preserve-3d</i>을 사용했습니다.<br>
-                해당 preserve-3d를 주면 <i>자식 요소</i>에 <i>3D</i>효과를 추가해주는 기능이 있습니다.<br>
-                3D효과를 추가 해줬다면 또 다른 위치 값을 줘야하기에 mouse__img에 따로 공간감을 더 주기 위해 <i>perspective</i>를 사용해줍니다.<br>
-                또한, 따로 글에도 마찬가지로 3D효과를 위해 <i>translate3d</i>를 추가해서 사용해줍니다.
+                CSS는 각자가 원하는 디자인 스타일에 맞게 지정해줍시다.<br>
+                이번 단위는 px가 아닌 vw를 사용해줬는데 vw는 반응형에서 px와는 맞게 작동하기에 vw를 사용해줬습니다.<br>
+                vw : 웹에서 보이는 부분에만 값을 준 것이다.<br>
+                또한, 각가 이미지에 nth-child를 이용해 이미지를 지정해줍니다.<br>
+                nth-child : 형제 사이에 순서에 따라 요소를 선택할 수 있게 해줍니다.
             </p>
             <details>
                 <summary>CSS CODE</summary>
@@ -319,19 +318,15 @@
 
             <h3 class="t_tit2">SCRIPT</h3>
             <p class="t_desc2">
-                이번 스크립트는 좌표를 중심적으로 짜봤습니다.<br><br>
+                이번 스크립트는 각 글씨에 움직임을 설정해주도록 하겠습니다.<br><br>
 
-                1. 마우스의 좌표 값은 앞선 다른 마우스 이펙트과 마찬가지로 똑같이 써줍니다.<br>
-                2. 마찬가지로 마우스 좌표의 중앙 기준점을 다른 마우스 이펙트와 같은 형식으로 써줍니다.<br>
-                3. 이젠 마우스의 움직임을 <i>미친듯이</i> 따라가는.. 것들의 움직임의 제한을 줘야합니다..<br>
-                4. 우선 해당 주석 : 이미지 움직이기와 같이 요소를 잡아주고 해당 값에 스타일을 지정해주며, 언제든 해당 값만 넣으면 변할 수 있도록 설정해줍니다.<br>
-                5. 첫 번째로 이젠.. 각 좌표 값을 정해줘야 하는데, maxPageX / Y의 움직임을 제한을 주기위해 <i>Math.max / min()</i> 함수를 사용해줍니다.<br>
-                6. 두 번째는 anglePageX / Y에다가 maxPageX / Y의 <i>0.1</i>만 곱해주는 형식으로 대입하여 각도의 제한을 줍니다.<br>
-                7. 마지막으로 언제나 사용하던 gsap를 사용하여 기존 마우스 커서 스타일을 대체해줍니다.
+                1. HTML에서 지정해준 split 클래스에 forEach 사용하며 innerText 이용해 요소에 텍스트를 설정해줍니다.<br>
+                2. splitText로 선언한 변수에 또 따로 span으로 나누어 주어 css효과를 주기 위해 문자열 메서드인 split와 배열 메서드인 join사용하여 각 한글자에 span을 지정해줍니다.<br>
+                또한, <i>웹 표준</i>을 지키기 위하여 <i>aria-hidden='true'</i>도 같이 지정해줍니다. 각 시작과 끝은 메서드가 설정되지 않기에 splitWrap에서 span을 반대로 지정해줍니다.<br>
+                3. splitWrap에 시작과 끝에 span을 선언해줍니다.<br>
+                4. 선언한 splitWrap를 text.innerHTML에 대입해줍니다. 마찬가지로 웹표준을 위해 <i>setAttribute()</i>사용하여 속성 값을 지정해줍니다.
+                5. 마우스 스크롤시에 지정된 좌표 값에 도달하는 스크립트는 전 이펙트들과 비슷한 형식으로 진행합니다.
             </p>
-            <p class="t_box">
-                Math.max() / min()는 각각에 주어진 값에 최대 값과 최소 값을 구할 수 있습니다.
-            </p><br>
             <details>
                 <summary>SCRIPT CODE</summary>
             <div class="t_code">
@@ -350,7 +345,7 @@ function scroll() {
 
     document.querySelectorAll("content__item").forEach(item => {
         if(scrollTop >= item.offsetTop) {
-            item.querySelectorAll(",split span").forEach((span, index) => {
+            item.querySelectorAll(".split span").forEach((span, index) => {
                 span.classList.add("show")
             })
         }
