--- a/study/t_study/Ex/study/searchEffect04.html
+++ b/study/t_study/Ex/study/searchEffect04.html
@@ -14,13 +14,12 @@
         <div class="document">
             <h2 class="t_tit">검색 이펙트 : find()</h2>
             <p class="t_desc2">
-                알파벳을 클릭하면 해당 알파벳이 앞자리에 포함된 속성이 나오도록 해보겠습니다.
+                이번 배열 메서드인 find()를 이용해 만든 검색 기능을 가진 이펙트를 코딩해봤습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
-                해당 html은 div안에 keyword클래스를 부여해 준 뒤, span을 사용하여 검색 기능의 구조를 잡아주도록 코딩했습니다.
+                HTML 구조는 언제나와 같이 CSS와 스크립트를 사용하기 위한 각각 맞는 클래스 이름을 지정해줍니다.
             </p>
             <details>
                 <summary>HTML CODE</summary>
@@ -54,7 +53,10 @@
 
             <h3 class="t_tit2">CSS</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
+                앞선 검색 이펙트들과 거의 동일한 형태입니다.<br>
+                CSS var() 함수를 사용하여 색 지정 및 변경을 하기 편하도록 해줬습니다.<br>
+                var() : 함수로 정의해둔 속성을 불러와 사용가능하다. : 사용 방법. var(--htmlColor)
             </p>
             <details>
                 <summary>CSS CODE</summary>
@@ -325,10 +327,20 @@ footer a:hover {
             </div>
             </details>
 
-            <h3 class="t_tit2">script</h3>
+            <h3 class="t_tit2">SCRIPT</h3>
             <p class="t_desc2">
-                querySelector를 이용하여 배열을 불러와준 뒤에, forEach문을 사용해줍니다.
-                해당 script는 charAt()를 사용하여 해당 알파벳을 누르면 검색되도록 설정했습니다.
+                이번엔 스크립로 각각 값을 불러오도록 하겠습니다.
+
+                1. cssProperty내에 객체로 각 데이터 값을 저장해둡니다.<br>
+                2. HTML지정해둔 클래스 이름에 요소 메서드를 사용하여 선택자를 설정해줍니다.<br>
+                3. 출력하는 방법은 우선 지정해둔 데이터 값에 배열 메서드는 <i>map</i>을 사용해주어 출력해줍니다. 이 때, <i>템플릿 리터럴(``)</i>을 사용해주어 출력해줍니다.<br>
+                4. 입력하기 작성은 이벤트 메서드 <i>keyup</i>을 사용해 키를 누르고 뗐을 시 작동하도록 하며, 지정해준 요소들을 서로 대입해줍니다.<br>
+                이 때 변수에 저장된 값을 불러오기 위해 <i>value</i>를 사용해줍니다.<br>
+                5. 클릭하기의 작성 방법은 따로 span값에 요소 지정과 동시에 <i>forEach</i>문을 사용해줍니다 span을 누를 시 <i>click</i>이벤트 메서드가 작동하도록 합니다.<br>
+                6. 속성 찾기에서 <i>find()</i>메서드가 사용됩니다. fine()란 배열을 검색했을 때에 요소를 반환해줍니다.<br>
+                변수를 지정해두고 cssProperty에 지정된 데이터 값을 불러와줍니다. 해당 작성은 <i>find()</i>메서드의 작성 법을 그대로 사용했습니다.<br>
+                만약 검색을 했을 시에 존재하지 않는 속성이라면 if문을 이용해 targetData속 데이터에 없는 값을 <i>== null</i>로 같은 값이 없다면 출력않도록 하며,<br>
+                textContent를 이용해 지정해둔 문자가 나오도록 합니다.
             </p>
 
             <details>
