--- a/study/t_study/Ex/study/searchEffect05.html
+++ b/study/t_study/Ex/study/searchEffect05.html
@@ -14,13 +14,12 @@
         <div class="document">
             <h2 class="t_tit">검색 이펙트 : filter()</h2>
             <p class="t_desc2">
-                알파벳을 클릭하면 해당 알파벳이 앞자리에 포함된 속성이 나오도록 해보겠습니다.
+                이번에는 배열 메서드인 filter()를 이용해 검색 기능을 가진 이펙트를 코딩해봤습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
-                해당 html은 div안에 keyword클래스를 부여해 준 뒤, span을 사용하여 검색 기능의 구조를 잡아주도록 코딩했습니다.
+                HTML 구조는 언제나와 같이 CSS와 스크립트를 사용하기 위한 각각 맞는 클래스 이름을 지정해줍니다.
             </p>
             <details>
                 <summary>HTML CODE</summary>
@@ -64,7 +63,10 @@
 
             <h3 class="t_tit2">CSS</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
+                앞선 검색 이펙트들과 거의 동일한 형태입니다.<br>
+                CSS var() 함수를 사용하여 색 지정 및 변경을 하기 편하도록 해줬습니다.<br>
+                var() : 함수로 정의해둔 속성을 불러와 사용가능하다. : 사용 방법. var(--htmlColor)
             </p>
             <details>
                 <summary>CSS CODE</summary>
