--- a/study/t_study/Ex/study/searchEffect04.html
+++ b/study/t_study/Ex/study/searchEffect04.html
@@ -329,7 +329,7 @@ footer a:hover {
 
             <h3 class="t_tit2">SCRIPT</h3>
             <p class="t_desc2">
-                이번엔 스크립로 각각 값을 불러오도록 하겠습니다.
+                이번 스크립트에서는 기존과는 다르게 스크립트로 데이터를 불러 올 예정이며, 배열 메서드인 find()를 사용해봤습니다.<br><br>
 
                 1. cssProperty내에 객체로 각 데이터 값을 저장해둡니다.<br>
                 2. HTML지정해둔 클래스 이름에 요소 메서드를 사용하여 선택자를 설정해줍니다.<br>
