--- a/study/t_study/Ex/study/searchEffect05.html
+++ b/study/t_study/Ex/study/searchEffect05.html
@@ -339,8 +339,14 @@ footer a:hover {
 
             <h3 class="t_tit2">script</h3>
             <p class="t_desc2">
-                querySelector를 이용하여 배열을 불러와준 뒤에, forEach문을 사용해줍니다.
-                해당 script는 charAt()를 사용하여 해당 알파벳을 누르면 검색되도록 설정했습니다.
+                이번에는 스크립트에서 데이터를 불러올 예정이며, 배열 메서드 중에서 하나인 filter()를 사용해봤습니다.<br><br>
+
+                1. 우선 cssProperty내에 객체로 각 데이터 값을 저장해둡니다.<br>
+                2. 두 번째로는 HTML지정해둔 클래스 이름에 요소 메서드를 사용하여 선택자를 설정해줍니다.<br>
+                3. 우선 출력하는 방법은  <i>for</i>문을 사용해주고 <i>템플릿 리터럴(``)</i>을 사용해 데이터를 불러와줍니다.<br>
+                4. 클릭하기는 지정해둔 요소에 <i>forEach</i>문을 사용하고 <i>click</i> 이벤트 메서드를 작용하여 클릭 시에 작동하도록 합니다.<br>
+                5. 데이터의 요소 값을 가져오기 위해 <i>dataset</i>을 사용해줍니다.<br>
+                6. 변수 filterList지정해줍니다. 해당 방법은 <i>filter()</i> 배열 메서드를 사용해줍니다. filter()는 조건에 만족하는 배열 요소 검색될 시에 배열을 <i>반환</i>해줍니다.
             </p>
 
             <details>
