--- a/javascript/effect/mouseEffect06.html
+++ b/javascript/effect/mouseEffect06.html
@@ -70,6 +70,11 @@
             user-select: none;
             pointer-events: none;
         }
+        .mouse__cursor.style1 {
+            background-color: #dddddd30;
+            border-color: #5e5b88;
+            transform: scale(5);
+        }
     </style>
 </head>
 <body class="jeju img05">
@@ -100,12 +105,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">one two</span>
+                                    <span class="spanSlow style1">one two</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">one two</span>
+                                    <span class="spanSlow style1">one two</span>
                                 </div>
                             </div>
                         </div>
@@ -113,12 +118,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanFast">three four</span>
+                                    <span class="spanFast style1">three four</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanFast">three four</span>
+                                    <span class="spanFast style1">three four</span>
                                 </div>
                             </div>
                         </div>
@@ -126,12 +131,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">five six</span>
+                                    <span class="spanSlow style1">five six</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">five six</span>
+                                    <span class="spanSlow style1">five six</span>
                                 </div>
                             </div>
                         </div>
@@ -139,12 +144,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanFast">seven eight</span>
+                                    <span class="spanFast style1">seven eight</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanFast">seven eight</span>
+                                    <span class="spanFast style1">seven eight</span>
                                 </div>
                             </div>
                         </div>
