--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -56,7 +56,7 @@
                 <li><a href="#">07. 이벤트 메서드 : addEventListener("mouseenter") : 요소 위에 포인터 요소의 위치가 있을 때</a></li>
                 <li><a href="#">07. 이벤트 메서드 : addEventListener("mouseleave") : 요소 위에 포인터 요소의 위치가 벗어 났을 때</a></li>
                 <li><a href="#">07. 이벤트 메서드 : addEventListener("mouseover") : 요소 위에 포인터 요소의 위치가 있을 때</a></li>
-                <li><a href="#">07. 이벤트 메서드 : addEventListener("mouseout") : 요소 위에 포인터 요소의 위치가 벗어 났을 때ㄴ</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListener("mouseout") : 요소 위에 포인터 요소의 위치가 벗어 났을 때</a></li>
                 <br>
                 <li><a href="#">08. 이벤트 메서드 : addEventListener("drag") : 드래그 중일 시</a></li>
                 <li><a href="#">09. 이벤트 메서드 : addEventListener("dragstart") : 드래그 시작 시</a></li>
