--- a/site/test02/test02.html
+++ b/site/test02/test02.html
@@ -418,29 +418,20 @@
 
     <script>
         const sliderWrap = document.querySelector(".slider__wrap");
-        const sliderImg = document.querySelector(".slider__img");          // 보여지는 영역
-        const sliderInner = document.querySelector(".slider__inner");      // 움직이는 영역
-        const slider = document.querySelectorAll(".slider");               // 각각 이미지
+        const sliderImg = document.querySelector(".slider__img");
+        const sliderInner = document.querySelector(".slider__inner");
+        const slider = document.querySelectorAll(".slider");
 
-        let currentIndex = 0;                                               // 현재 보이는 이미지
-        let sliderCount = slider.length;                                    // 이미지 갯수
-        let sliderWidth = sliderImg.offsetWidth;                            // 이미지 가로 값
-        let sliderClone = sliderInner.firstElementChild.cloneNode(true);    // 첫번째 이미지 복사
-        sliderInner.appendChild(sliderClone);                               // 슬라이드 이미지를 마지막에 넣어줌
+        let currentIndex = 0;
+        let sliderCount = slider.length;
+        let sliderWidth = sliderImg.offsetWidth;
+        let sliderClone = sliderInner.firstElementChild.cloneNode(true);
+        sliderInner.appendChild(sliderClone);
 
         function sliderEffect() {
             currentIndex++;
             sliderInner.style.transition = "all 0.6s";
             sliderInner.style.transform = "translateX(-"+ sliderWidth * currentIndex +"px)";
-
-            // sliderInner.style.transform = "translateX(-800px)";
-            // sliderInner.style.transform = "translateX(-1600px)";
-            // sliderInner.style.transform = "translateX(-2400px)";
-            // sliderInner.style.transform = "translateX(-3200px)";
-            // sliderInner.style.transform = "translateX(-4000px)";
-            // sliderInner.style.transform = "translateX(-4800px)";
-
-            // 마지막 사진에 위치했을 때
             if(currentIndex == sliderCount) {
                 setTimeout(() => {
                     sliderInner.style.transition = "0s";
