--- a/test/javascriptTest05.html
+++ b/test/javascriptTest05.html
@@ -441,17 +441,17 @@ document.write(solution(7))
 
         // 4
         {
-            function func(){
-                let a = ["13",0,1,7,13,4,1,33,44,12,3,1,"3"];
-                let value = 0;
-                for( i=0; i<a.length; i++){
-                    if( a[i] != 3 ){
-                        value++;
-                    }
-                }
-                document.write(value);
-            }
-            func();
+            // function func(){
+            //     let a = ["13",0,1,7,13,4,1,33,44,12,3,1,"3"];
+            //     let value = 0;
+            //     for( i=0; i<a.length; i++){
+            //         if( a[i] != 3 ){
+            //             value++;
+            //         }
+            //     }
+            //     document.write(value);
+            // }
+            // func();
         }
 
         // 5
