--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@
               </div>
             </a>
           </section>
-          <!-- //box GAME -->
+          <!-- //box CSS -->
 
-          <!-- box CSS -->
+          <!-- box MySQL -->
           <section class="color-shape animation">
             <a href="sql/index.html" target="_blank">
               <div class="image-wrap">
@@ -474,7 +474,49 @@
               </div>
             </a>
           </section>
-          <!-- //box GAME -->
+          <!-- //box MySQL -->
+
+          <!-- box PHP STUDY -->
+          <section class="color-shape animation">
+            <a href="https://github.com/KDB6/php" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">PHP STUDY</span>
+                  <span class="overlay-text-thumb-donut">PHP STUDY</span>
+                  <span class="overlay-text-thumb1-donut">PHP STUDY</span>
+                  <span class="overlay-text-thumb2-donut">PHP STUDY</span>
+                </div>
+                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>PHP STUDY</h5>
+                  <p>PHP STUDY</p>
+                  <span>PHP STUDY</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box PHP STUDY -->
+
+          <!-- box PHP PROJECT -->
+          <section class="color-shape animation">
+            <a href="sql/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">PHP PROJECT</span>
+                  <span class="overlay-text-thumb-donut">PHP PROJECT</span>
+                  <span class="overlay-text-thumb1-donut">PHP PROJECT</span>
+                  <span class="overlay-text-thumb2-donut">PHP PROJECT</span>
+                </div>
+                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>PHP PROJECT</h5>
+                  <p>PHP PROJECT</p>
+                  <span>PHP PROJECT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box PHP PROJECT -->
           
         </div>
         <!-- //container-->
