--- a/index.html
+++ b/index.html
@@ -497,6 +497,27 @@
           </section>
           <!-- //box PHP STUDY -->
 
+          <!-- box PHP STUDY GITHUB -->
+          <section class="color-shape animation">
+            <a href="sql/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">PHP STUDY GITHUB</span>
+                  <span class="overlay-text-thumb-donut">PHP STUDY GITHUB</span>
+                  <span class="overlay-text-thumb1-donut">PHP STUDY GITHUB</span>
+                  <span class="overlay-text-thumb2-donut">PHP STUDY GITHUB</span>
+                </div>
+                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>PHP STUDY GITHUB</h5>
+                  <p>PHP STUDY GITHUB</p>
+                  <span>PHP STUDY GITHUB</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box PHP STUDY GITHUB -->
+
           <!-- box PHP PROJECT -->
           <section class="color-shape animation">
             <a href="sql/index.html" target="_blank">
@@ -507,11 +528,32 @@
                   <span class="overlay-text-thumb1-donut">PHP PROJECT</span>
                   <span class="overlay-text-thumb2-donut">PHP PROJECT</span>
                 </div>
-                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
+                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PHP PROJECT</h5>
                   <p>PHP PROJECT</p>
                   <span>PHP PROJECT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box PHP PROJECT -->
+
+          <!-- box PHP PROJECT GITHUB -->
+          <section class="color-shape animation">
+            <a href="sql/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">PHP PROJECT GITHUB</span>
+                  <span class="overlay-text-thumb-donut">PHP PROJECT GITHUB</span>
+                  <span class="overlay-text-thumb1-donut">PHP PROJECT GITHUB</span>
+                  <span class="overlay-text-thumb2-donut">PHP PROJECT GITHUB</span>
+                </div>
+                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>PHP PROJECT GITHUB</h5>
+                  <p>PHP PROJECT GITHUB</p>
+                  <span>PHP PROJECT GITHUB</span>
                 </div>
               </div>
             </a>
