--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
           <!-- box PHP STUDY -->
           <section class="color-shape animation">
-            <a href="https://github.com/KDB6/php" target="_blank">
+            <a href="#" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP STUDY</span>
@@ -499,7 +499,7 @@
 
           <!-- box PHP STUDY GITHUB -->
           <section class="color-shape animation">
-            <a href="sql/index.html" target="_blank">
+            <a href="https://github.com/KDB6/php" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP STUDY GITHUB</span>
@@ -520,7 +520,7 @@
 
           <!-- box PHP PROJECT -->
           <section class="color-shape animation">
-            <a href="sql/index.html" target="_blank">
+            <a href="https://younghwan12.github.io/project/" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP PROJECT</span>
@@ -541,7 +541,7 @@
 
           <!-- box PHP PROJECT GITHUB -->
           <section class="color-shape animation">
-            <a href="sql/index.html" target="_blank">
+            <a href="#" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP PROJECT GITHUB</span>
