--- a/project/html/loginpopup.html
+++ b/project/html/loginpopup.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../asset/css/common.css">
     <link rel="stylesheet" href="../asset/css/reset.css">
 
-
     <link rel="stylesheet" href="../asset/css/login.css">
 </head>
 <body>
@@ -17,6 +16,12 @@
         <div class="login__inner">
             <div class="login__header">
                 <h3>winimal Login</h3>
+            </div>
+            <div class="login__welcome">
+                <h3>어서오세요! 위니멀에!</h3>
+                <figure>
+                    <img src="../asset/img/loginWelcome.jpg" alt="login">
+                </figure>
             </div>
             <div class="login__contents">
                 <form name="login" action="loginSave.php" method="POST">
