--- a/project3/project3/figma/findID_01.html
+++ b/project3/project3/figma/findID_01.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게시판 메인</title>
+    <title>아이디 찾기01</title>
     <style>
         * {
             margin: 0;
@@ -33,7 +33,7 @@
     <div class="card__wrap">
         <div class="card">
             <a href="index.html"><h2>피그마</h2></a>
-            <p>게시판 메인</p><br>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D1003%253A28" allowfullscreen></iframe>
+            <p>아이디 찾기1</p><br>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="500" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUpsthaIVoD9chznKFRi6tU%2F%25EC%25A1%25B0%25EB%25B3%2584-%25EC%259E%2591%25EC%2597%2585%3Fnode-id%3D489%253A5" allowfullscreen></iframe></div>    
 </body>
 </html>
